# ski-trip

./: .gitignore  helpers.py  justfile  main.py  main.pyxpal  main.pyxres  pyproject.toml
.github/workflows/: publish.yml
